Hack to fix settings page layout problems in WP 3.3
git-svn-id: https://plugins.svn.wordpress.org/broken-link-checker/trunk@414423 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/options-page.css
+++ b/css/options-page.css
@@ -105,6 +105,8 @@ ul.ui-tabs-nav {
 	overflow: hidden;
 	white-space: nowrap;
 	padding-right: 3.5em;
+	
+	line-height: 5px;
 }
 
 ul.ui-tabs-nav li {
